--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,19 @@ body {
 	margin: 0;
 	font-family: "Arial", sans-serif;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px; 
+  height: 1px; 
+  padding: 0;
+  border: 0;
+  margin: -1px;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+}
 .container {
 	max-width: 1170px;
 	padding: 0 15px;
