--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,13 @@ body {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+/*MOVIES LIST*/
+.movies__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
